[package]
name = "puzzle-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7.1.0"
maplit = "^1.0.2"
serde = {version = "^1.0.133", features = ["derive"]}
serde_json = "^1.0.74"
delegate = "^0.6.1"
derive-new = "^0.5.9"
structopt = "^0.3.25"
typed-builder = "^0.9.1"
typed-arena = "^2.0.1"
bumpalo = "^3.9.1"

[profile.release]
debug = true